MilestoneRFAFullSandBox/src/objects/COA__c.object
<CustomObject>
    <fields>
        <fullName>PrimaryCOASubCategory3__c</fullName>
        <label>Primary COA Sub Category 3</label>
        <picklist>
            <controllingField>PrimaryCOASubCategory2__c</controllingField>
            <picklistValues>
                <fullName>a. Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other intangible assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Funding by shift of funds from an approved current year Capital Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Inventory Count Adjustment (per location)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Write-offs and disposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Write-downs (incl. flush out)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Contract renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Budgeted : ≦ Total ￥ 50,000,000 and ≦ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Budgeted : ＞ Total ￥ 50,000,000 or　＞ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Non-Budgeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other - ≦ Total ￥ 50,000,000 and ≦ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other - ＞ Total ￥ 50,000,000 or　＞ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Establishment of and changes to PTC - KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Establishment of and changes to PTC - Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Specific deviation or a new program to the approved PTC Concept - KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Specific deviation or a new program to the approved PTC Concept - Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Approval of periodic gross price list changes for whole KO and Non-KO products range or parts thereof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Determination of gross list price / local conditions for single SKUs - KO for existing packaging / product segments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Determination of gross list price / local conditions for single SKUs - KO for new packaging / product segments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d. Approval of material master request for Non-KO trading goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Approval of material master request for Non-KO other items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>f. Determination of gross list price for advertising material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g. Approval of KO-material master request for cross territory sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Approval of transfer price for sales transactions with other bottlers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Determination and Changes for specific articles during a period (within a year)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Annual approval of standard cost of sales (Intercompany transfer price within CCEJ group)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Determination and Changes for specific articles during a period (within a year)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Field Sales Operations Customer (Excluding &quot;SAKAYA KAM&quot;)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryCOASubCategory__c</fullName>
        <label>Primary COA Sub Category 1</label>
        <picklist>
            <controllingField>PrimaryCOACategory__c</controllingField>
            <picklistValues>
                <fullName>A. Purchase of Fixed Assets (Capital Expenditures)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Disposal of Fixed Assets (Sale and write-off)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Transfer of Fixed Assets among consolidated CCEJ locations and operations (tangible and intangible assets)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Asset Impairments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Revaluation or Write-off of Other Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Operating Leases / Rental Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Capital Leases(excluding Vehicles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Approval of Pricing Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Customer Terms &amp; Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Credit Terms / Policies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Approval of Operating Expenses within Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Operating Expenses in excess of Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Marketing Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. CCEJ One-time Integration Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. External Borrowings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Intercompany Loans (within CCEJ Group)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Derivative and other Financial Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Cash Disbursements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Loans, Loan Guarantees and Guarantees for Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Litigation, Termination and Dismissal of employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Compensation and Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Collective Labor Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F. Overtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G. Travel Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Charitable Donations and Political Related Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Social Amenities, Gifts, Entertainment, Congratulatory or Condolence money, and Other Courtesies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Club Memberships and Other Memberships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Supply, Purchase and Outsourcing Agreements (including Contract Manufacturing Arrangements)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_List__c</fullName>
        <label>Record Type List</label>
        <picklist>
            <picklistValues>
                <fullName>Small Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Right_Bracket__c</fullName>
        <label>Right Bracket</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Right_Sign__c</fullName>
        <label>Right Sign</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;=</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shareholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shareholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Threshold_Type__c</fullName>
        <label>Threshold Type</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value with Record Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unkown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>COA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Left_Sign__c</columns>
        <columns>Left_Bracket__c</columns>
        <columns>Right_Sign__c</columns>
        <columns>Right_Bracket__c</columns>
        <columns>PrimaryCOACategory__c</columns>
        <columns>PrimaryCOASubCategory__c</columns>
        <columns>PrimaryCOASubCategory2__c</columns>
        <columns>PrimaryCOASubCategory3__c</columns>
        <columns>Function_CokeOne_1__c</columns>
        <columns>Threshold_Type__c</columns>
        <columns>BOD__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COA_Appendix_3_B_1_B_7</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CM_PrimaryCOASubCategory__c</columns>
        <columns>CM_Sub_Category__c</columns>
        <columns>CM_Sub_sub_Category__c</columns>
        <columns>CM_Approver_Final_Level__c</columns>
        <columns>CM_Approver_Steps__c</columns>
        <columns>CM_Approver_Random_Order__c</columns>
        <columns>CM_L8_1__c</columns>
        <columns>CM_L9_1__c</columns>
        <columns>CM_L10_1__c</columns>
        <columns>CM_L11_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>COA__c.COA_Appendix_3_B_1_To_B_7</value>
        </filters>
        <label>COA Appendix Ⅲ.  B. 1. - B.7.</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COA_Appendix_3_B_1_B_7_B_8</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CM_PrimaryCOASubCategory__c</columns>
        <columns>CM_Sub_Category_B8__c</columns>
        <columns>CM_Sub_sub_Category_B8__c</columns>
        <columns>CM_Approver_Final_Level__c</columns>
        <columns>CM_Approver_Steps__c</columns>
        <columns>CM_Approver_Random_Order__c</columns>
        <columns>Memo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>COA__c.COA_Appendix_B_1_B_7_B_8</value>
        </filters>
        <label>COA Appendix Ⅲ. (B. 1. - B.7.) + B.8.</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COA_Appendix_3_C</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CM_Primary_COA_Category_C1__c</columns>
        <columns>CM_Primary_COA_Category_C2__c</columns>
        <columns>CM_Primary_COA_Category_C3__c</columns>
        <columns>CM_Primary_COA_Category_C4__c</columns>
        <columns>CM_Approver_Final_Level__c</columns>
        <columns>CM_Approver_Steps__c</columns>
        <columns>CM_Approver_Random_Order__c</columns>
        <columns>CM_L8_1__c</columns>
        <columns>CM_L9_1__c</columns>
        <columns>CM_L10_1__c</columns>
        <columns>CM_L11_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>COA__c.COA_Appendix_3_C</value>
        </filters>
        <label>COA Appendix Ⅲ.  C.</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COA_Appendix_B_1</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CM_PrimaryCOASubCategory__c</columns>
        <columns>CM_Sub_Category__c</columns>
        <columns>CM_Sub_sub_Category__c</columns>
        <columns>CM_Approver_Final_Level__c</columns>
        <columns>CM_Approver_Steps__c</columns>
        <columns>CM_Approver_Random_Order__c</columns>
        <columns>CM_L8_1__c</columns>
        <columns>CM_L9_1__c</columns>
        <columns>CM_L10_1__c</columns>
        <columns>CM_L11_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012O00000000Sh3</value>
        </filters>
        <label>COA Appendix Ⅲ. B. 1. - B.6.</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COA_Appendix_B_1a</fullName>
        <columns>NAME</columns>
        <columns>CM_L9_1__c</columns>
        <columns>CM_L9_Mapping_Level__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CM_PrimaryCOASubCategory__c</columns>
        <columns>CM_Sub_Category__c</columns>
        <columns>CM_Sub_sub_Category__c</columns>
        <columns>CM_Approver_Final_Level__c</columns>
        <columns>CM_Approver_Steps__c</columns>
        <columns>CM_Approver_Random_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>COA__c.COA_Appendix_3_B_1_To_B_7</value>
        </filters>
        <filters>
            <field>CM_PrimaryCOASubCategory__c</field>
            <operation>equals</operation>
            <value>1. Approval of Field Sales Operation and VM Customer Agreement</value>
        </filters>
        <label>COA Appendix Ⅲ. B. 1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COA_Appendix_B_2</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CM_PrimaryCOASubCategory__c</columns>
        <columns>CM_Sub_Category__c</columns>
        <columns>CM_Sub_sub_Category__c</columns>
        <columns>CM_Approver_Final_Level__c</columns>
        <columns>CM_Approver_Steps__c</columns>
        <columns>CM_Approver_Random_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>COA__c.COA_Appendix_3_B_1_To_B_7</value>
        </filters>
        <filters>
            <field>CM_PrimaryCOASubCategory__c</field>
            <operation>equals</operation>
            <value>2. Approval of Customer Agreement for CS KAM</value>
        </filters>
        <label>COA Appendix Ⅲ. B. 2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COA_Appendix_B_3</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CM_PrimaryCOASubCategory__c</columns>
        <columns>CM_Sub_Category__c</columns>
        <columns>CM_Sub_sub_Category__c</columns>
        <columns>CM_Approver_Final_Level__c</columns>
        <columns>CM_Approver_Steps__c</columns>
        <columns>CM_Approver_Random_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>COA__c.COA_Appendix_3_B_1_To_B_7</value>
        </filters>
        <filters>
            <field>CM_PrimaryCOASubCategory__c</field>
            <operation>equals</operation>
            <value>3. Approval of Customer Agreement for Food KAM</value>
        </filters>
        <label>COA Appendix Ⅲ. B. 3</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COA_Appendix_B_4</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CM_PrimaryCOASubCategory__c</columns>
        <columns>CM_Sub_Category__c</columns>
        <columns>CM_Sub_sub_Category__c</columns>
        <columns>CM_Approver_Final_Level__c</columns>
        <columns>CM_Approver_Steps__c</columns>
        <columns>CM_Approver_Random_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>COA__c.COA_Appendix_3_B_1_To_B_7</value>
        </filters>
        <filters>
            <field>CM_PrimaryCOASubCategory__c</field>
            <operation>equals</operation>
            <value>4. Approval of Customer Agreement for SAKAYA KAM</value>
        </filters>
        <label>COA Appendix Ⅲ. B. 4</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COA_Appendix_B_5</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CM_PrimaryCOASubCategory__c</columns>
        <columns>CM_Sub_Category__c</columns>
        <columns>CM_Sub_sub_Category__c</columns>
        <columns>CM_Approver_Final_Level__c</columns>
        <columns>CM_Approver_Steps__c</columns>
        <columns>CM_Approver_Random_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>COA__c.COA_Appendix_3_B_1_To_B_7</value>
        </filters>
        <filters>
            <field>CM_PrimaryCOASubCategory__c</field>
            <operation>equals</operation>
            <value>5. Approval of Customer Agreement for VM Corporate Sales&amp;Hunter</value>
        </filters>
        <label>COA Appendix Ⅲ. B. 5</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COA_Appendix_B_6</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CM_PrimaryCOASubCategory__c</columns>
        <columns>CM_Sub_Category__c</columns>
        <columns>CM_Sub_sub_Category__c</columns>
        <columns>CM_Approver_Final_Level__c</columns>
        <columns>CM_Approver_Steps__c</columns>
        <columns>CM_Approver_Random_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>COA__c.COA_Appendix_3_B_1_To_B_7</value>
        </filters>
        <filters>
            <field>CM_PrimaryCOASubCategory__c</field>
            <operation>equals</operation>
            <value>6. Approval of Customer Agreement for Corporate KAM</value>
        </filters>
        <label>COA Appendix Ⅲ. B. 6</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COA_Appendix_B_7</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CM_PrimaryCOASubCategory__c</columns>
        <columns>CM_Sub_Category__c</columns>
        <columns>CM_Sub_sub_Category__c</columns>
        <columns>CM_Approver_Final_Level__c</columns>
        <columns>CM_Approver_Steps__c</columns>
        <columns>CM_Approver_Random_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>COA__c.COA_Appendix_3_B_1_To_B_7</value>
        </filters>
        <filters>
            <field>CM_PrimaryCOASubCategory__c</field>
            <operation>equals</operation>
            <value>7. Approval of Customer Agreement for FV - VM</value>
        </filters>
        <filters>
            <field>CM_PrimaryCOASubCategory__c</field>
            <operation>equals</operation>
            <value>&quot;7. Approval of Customer Agreement for FV - OCS, Shop Caffe&quot;</value>
        </filters>
        <filters>
            <field>CM_PrimaryCOASubCategory__c</field>
            <operation>equals</operation>
            <value>7. Approval of Customer Agreement for FV - Corporate Sales</value>
        </filters>
        <label>COA Appendix Ⅲ. B. 7</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COA_Appendix_B_7_Corp</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CM_PrimaryCOASubCategory__c</columns>
        <columns>CM_Sub_Category__c</columns>
        <columns>CM_Sub_sub_Category__c</columns>
        <columns>CM_Approver_Final_Level__c</columns>
        <columns>CM_Approver_Steps__c</columns>
        <columns>CM_Approver_Random_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>COA__c.COA_Appendix_3_B_1_To_B_7</value>
        </filters>
        <filters>
            <field>CM_PrimaryCOASubCategory__c</field>
            <operation>equals</operation>
            <value>7. Approval of Customer Agreement for FV - Corporate Sales</value>
        </filters>
        <label>COA Appendix Ⅲ. B. 7 - Corp</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COA_Appendix_B_7_OCS</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CM_PrimaryCOASubCategory__c</columns>
        <columns>CM_Sub_Category__c</columns>
        <columns>CM_Sub_sub_Category__c</columns>
        <columns>CM_Approver_Final_Level__c</columns>
        <columns>CM_Approver_Steps__c</columns>
        <columns>CM_Approver_Random_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>COA__c.COA_Appendix_3_B_1_To_B_7</value>
        </filters>
        <filters>
            <field>CM_PrimaryCOASubCategory__c</field>
            <operation>equals</operation>
            <value>&quot;7. Approval of Customer Agreement for FV - OCS, Shop Caffe&quot;</value>
        </filters>
        <label>COA Appendix Ⅲ. B. 7 - OCS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COA_Appendix_B_7_VM</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CM_PrimaryCOASubCategory__c</columns>
        <columns>CM_Sub_Category__c</columns>
        <columns>CM_Sub_sub_Category__c</columns>
        <columns>CM_Approver_Final_Level__c</columns>
        <columns>CM_Approver_Steps__c</columns>
        <columns>CM_Approver_Random_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>COA__c.COA_Appendix_3_B_1_To_B_7</value>
        </filters>
        <filters>
            <field>CM_PrimaryCOASubCategory__c</field>
            <operation>equals</operation>
            <value>7. Approval of Customer Agreement for FV - VM</value>
        </filters>
        <label>COA Appendix Ⅲ. B. 7 - VM</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>COA No.</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>COA_Appendix_3_B_1_To_B_7</fullName>
        <active>true</active>
        <label>COA Appendix Ⅲ. B. 1. - B. 7.</label>
    </recordTypes>
    <recordTypes>
        <fullName>COA_Appendix_3_C</fullName>
        <active>true</active>
        <description>COA Appendix Ⅲ. C. Price promotion for Marketing &amp; Commercial leadership</description>
        <label>COA Appendix Ⅲ. C.</label>
    </recordTypes>
    <recordTypes>
        <fullName>COA_Appendix_3_D</fullName>
        <active>true</active>
        <label>COA Appendix Ⅲ. D.</label>
    </recordTypes>
    <recordTypes>
        <fullName>COA_Appendix_B_1_B_7_B_8</fullName>
        <active>true</active>
        <label>COA Appendix Ⅲ. (B. 1. - B. 7.) + B. 8.</label>
    </recordTypes>
    <recordTypes>
        <fullName>COA_Matrix</fullName>
        <active>true</active>
        <description>Matrix - Specific Business Transaction</description>
        <label>COA Matrix</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>